[package]
name = "plex-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["stream", "gzip"] }
tokio = { version = "1.41.0", features = ["full"] }
futures-io = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
